# windows-gif-screenshotter

./: README.md
src/: main.js  overlay.css  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
